force-app/main/default/objects/Billing_Resource__c/Billing_Resource__c.object-meta.xml
<CustomObject>
    <label>Billing Resource</label>
    <nameField>
        <label>Billing Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>