force-app/main/default/objects/Billing_Resource__c/fields/Base_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Base_Unit_of_Measure__c</fullName>
    <label>Base Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BUDGET</fullName>
            </value>
            <value>
                <fullName>CAMP.</fullName>
            </value>
            <value>
                <fullName>CLICKS</fullName>
            </value>
            <value>
                <fullName>CPC</fullName>
            </value>
            <value>
                <fullName>DAYS</fullName>
            </value>
            <value>
                <fullName>EVENTS</fullName>
            </value>
            <value>
                <fullName>HOURS</fullName>
            </value>
            <value>
                <fullName>IMPR</fullName>
            </value>
            <value>
                <fullName>MONTH</fullName>
            </value>
            <value>
                <fullName>UNIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>