force-app/main/default/objects/Billing_Resource__c/fields/File_Type_Invoice_Template__c.field-meta.xml
<CustomField>
    <fullName>File_Type_Invoice_Template__c</fullName>
    <label>File Type (Invoice Template)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>