force-app/main/default/objects/Billing_Resource__c/fields/Gen_Prod_Posting_Group__c.field-meta.xml
<CustomField>
    <fullName>Gen_Prod_Posting_Group__c</fullName>
    <label>Gen. Prod. Posting Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GOODS</fullName>
                <label>Goods</label>
            </value>
            <value>
                <fullName>INTERESTS</fullName>
            </value>
            <value>
                <fullName>M SERVICES</fullName>
            </value>
            <value>
                <fullName>R SERV AG</fullName>
            </value>
            <value>
                <fullName>R SERV DIS</fullName>
            </value>
            <value>
                <fullName>R SERVICES</fullName>
            </value>
            <value>
                <fullName>SERVICES</fullName>
            </value>
            <value>
                <fullName>TRADING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>