force-app/main/default/objects/Billing_Resource__c/fields/Price_Profit_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Price_Profit_Calculation__c</fullName>
    <label>Price/Profit Calculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>