force-app/main/default/objects/Billing_Resource__c/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <label>Profit %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>