force-app/main/default/objects/Billing_Resource__c/fields/Resource_Number__c.field-meta.xml
<CustomField>
    <fullName>Resource_Number__c</fullName>
    <externalId>true</externalId>
    <label>Resource Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>