force-app/main/default/objects/Billing_Resource__c/fields/Resource_Recharge_Price__c.field-meta.xml
<CustomField>
    <fullName>Resource_Recharge_Price__c</fullName>
    <label>Resource Recharge Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>