force-app/main/default/objects/Billing_Resource__c/fields/Search_Name__c.field-meta.xml
<CustomField>
    <fullName>Search_Name__c</fullName>
    <label>Search Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>