force-app/main/default/objects/Billing_Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Resource_Number__c</columns>
    <columns>Search_Name__c</columns>
    <columns>Base_Unit_of_Measure__c</columns>
    <columns>Product_Group__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>File_Type_Invoice_Template__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>